# probe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  UI_INPUTS.md  action.yml  entrypoint.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue_adapter.md  good_first_issue_probe.md
.github/workflows/: ci.yml
examples/: new.sql  old.sql  seed.py
probe/: __init__.py  cli.py  comment.py  db.py  diff.py  lineage.py  orchestrate.py  policy.py  probes.py  report.py  severity.py  ui.py  verify.py
tests/: bench.py  test_bench.py  test_cli.py  test_comment.py  test_db.py  test_diff.py  test_integration.py  test_lineage.py  test_orchestrate.py  test_policy.py  test_postgres.py  test_probes.py  test_report.py  test_severity.py  test_verify.py
tests/fixtures/: manifest.json
tests/seeds/fan_out/: meta.json  new.sql  old.sql  setup.sql
tests/seeds/grain_change/: meta.json  new.sql  old.sql  setup.sql
tests/seeds/metric_shift/: meta.json  new.sql  old.sql  setup.sql
tests/seeds/new_nulls/: meta.json  new.sql  old.sql  setup.sql
tests/seeds/row_drop_inner_join/: meta.json  new.sql  old.sql  setup.sql
