[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probe"
version = "0.1.0"
description = "A SQL reviewer that runs an AI-written SQL change against real data and reports what changed, with proof."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
probe = "probe.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
